refactor: code style 변경 - [hackday-convention](https://github.com/naver/hackday-conventions-java/tree/master/rule-config)